<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="389dp"
        android:layout_height="0dp"
        android:layout_marginBottom="346dp"
        android:src="@drawable/login"
        app:layout_constraintBottom_toTopOf="@+id/already_regn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <EditText
        android:id="@+id/email_regn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="38dp"
        android:hint="@string/enter_email"
        app:layout_constraintBottom_toTopOf="@+id/pass_regn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage" />

    <EditText
        android:id="@+id/pass_regn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="29dp"
        android:hint="Enter Password"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_regn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signup"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="13dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/already_regn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_regn"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/already_regn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"

        android:layout_marginBottom="81dp"
        android:text="@string/already_registerted_sign_in"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>